# someip_rpc_playground

./: Cargo.toml  justfile
crates/application/: Cargo.toml
crates/application/src/: config.rs
crates/someip/: Cargo.toml
