[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
someip_parse = "0.6.2"
log = "0.4.27"
simple_logger = "5.0.0"
application = { path = "crates/application" }
generated = { path = "crates/generated" }